# JogoDoDrole

./: CMakeLists.txt  LICENSE  README.md
assets/fonts/: font_indices.txt
assets/images/: texture_indices.txt
assets/sounds/: sound_indices.txt
include/engine/graphics/: graphicManager.h  image.h  renderer.h  sprite.h  textureManager.h  view.h
include/engine/graphics/text/: fontLocations.h  fontManager.h  text.h
include/engine/input/: clickBox.h
include/engine/math/: vec4f.h
include/engine/physics/: colliderTypes.h  collisionManager.h
include/engine/sound/: sound.h  soundLocations.h  soundSource.h
include/engine/stateMachine/: stateStack.h
include/game/gameStates/: mainMenuState.h  playState.h
include/glad/: glad.h
include/graphics/: graphicManager.h  image.h  quad.h  renderer.h  shaderProgram.h  sprite.h  texture.h  textureLocations.h  textureManager.h  view.h  window.h
include/graphics/particles/: particle.h  particleSystem.h
include/graphics/text/: font.h  fontLocations.h  fontManager.h  text.h
include/input/: clickable.h  inputManager.h
include/managers/: inputManager.h
include/math/: rectangle.h  vec2f.h  vec2i.h
include/physics/: collidable.h  collidableTypes.h  collider.h  collisionManager.h
include/sound/: sound.h  soundLocations.h  soundManager.h  soundSource.h
include/stateMachine/: stateMachine.h  stateStack.h
shaders/: simpleTestFragmentShader.sdf  simpleTestVertexShader.sdv
src/: image.cpp  main.cpp
src/engine/graphics/: image.cpp  shaderProgram.cpp  sprite.cpp  texture.cpp  textureManager.cpp  window.cpp
src/engine/graphics/imageLoader/: stb_image.cpp
src/engine/graphics/particles/: particle.cpp
src/engine/graphics/text/: font.cpp  text.cpp
src/engine/math/: vec2f.cpp  vec2i.cpp  vec4f.cpp
src/engine/physics/: collider.cpp  collisionManager.cpp
src/engine/stateMachine/: stateStack.cpp
src/game/gameStates/: mainMenuState.cpp  playState.cpp
src/glad/: glad.cpp
src/graphics/: graphicManager.cpp  image.cpp  quad.cpp  renderer.cpp  shaderProgram.cpp  sprite.cpp  texture.cpp  textureManager.cpp  view.cpp  window.cpp
src/graphics/particles/: particle.cpp  particleSystem.cpp
src/graphics/text/: font.cpp  fontManager.cpp  text.cpp
src/input/: clickBox.cpp  clickable.cpp  inputManager.cpp
src/managers/: inputManager.cpp
src/math/: rectangle.cpp
src/physics/: collidable.cpp  collisionManager.cpp
src/sound/: sound.cpp  soundManager.cpp  soundSource.cpp
src/stateMachine/: stateMachine.cpp  stateStack.cpp
